@@ -1,4 +1,8 @@
 2006-05-21 François Proulx <francois.proulx@gmail.com>
+	* Fixed various bugs in content system
+	* stylesheet work
+
+2006-05-21 François Proulx <francois.proulx@gmail.com>
 	* Think I've fixed Google Maps on IE.
 		* need to test on another system..
 
